--- a/res/layout/tiled_grid_card_item_layout.xml
+++ b/res/layout/tiled_grid_card_item_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:geekui="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="177dp"
     android:minHeight="177dp"
@@ -121,5 +122,13 @@
         android:layout_height="wrap_content"
         android:src="@drawable/quest_badge_small"/>
     
+    <com.photowall.widget.typeface.TypefaceTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="SLEEP ON THE FLOOR"
+        android:textSize="11sp"
+        android:textColor="@color/white"
+        geekui:customTypeface="fonts/TrajanPro-Bold.ttf"/>
 </FrameLayout>
 
