--- a/res/layout/hot_fragment_gridview.xml
+++ b/res/layout/hot_fragment_gridview.xml
@@ -2,7 +2,7 @@
     xmlns:staggered="http://schemas.android.com/apk/res-auto" 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#ffffff"    
+    android:background="@color/window_background"
     android:orientation="vertical" >
 
     <com.photowall.widget.staggedGridView.StaggeredGridView
