--- a/res/layout/viewpager_fragment.xml
+++ b/res/layout/viewpager_fragment.xml
@@ -7,7 +7,7 @@
     <com.viewpagerindicator.TitlePageIndicator
         android:id="@+id/indicator"
         android:layout_width="fill_parent"
-        android:layout_height="30dp"
+        android:layout_height="@dimen/title_indicator_height"
         android:layout_alignParentTop="true" />
 
     <android.support.v4.view.ViewPager
