--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -22,4 +22,5 @@
      <dimen name="slidingmenu_offset">60dp</dimen>
     <dimen name="list_padding">10dp</dimen>
     <dimen name="shadow_width">15dp</dimen>
+    <dimen name="title_indicator_height">30dp</dimen>
 </resources>
