--- a/res/drawable/post_publish.xml
+++ b/res/drawable/post_publish.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?> 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="true" android:state_pressed="true" android:drawable="@drawable/btn_publish_pressed"/>
-    <item android:state_enabled="true" android:state_checked="true" android:drawable="@drawable/btn_publish_pressed"/>
-    <item android:state_enabled="true" android:state_selected="true" android:drawable="@drawable/btn_publish_pressed"/>
-    <item android:drawable="@drawable/btn_publish_normal"/>
+    <item android:state_enabled="true" android:state_pressed="true" android:drawable="@drawable/round_rect_with_red_boder"/>
+    <item android:state_enabled="true" android:state_checked="true" android:drawable="@drawable/round_rect_with_red_boder"/>
+    <item android:state_enabled="true" android:state_selected="true" android:drawable="@drawable/round_rect_with_red_boder"/>
+    <item android:drawable="@drawable/round_rect_red"/>
 </selector>
 
