--- a/res/layout/archievement_details_layout.xml
+++ b/res/layout/archievement_details_layout.xml
@@ -188,6 +188,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/btn_check_in"
+                    android:paddingBottom="2dp"
                     android:text="CHECK-IN"
                     android:textSize="6sp"
                     android:gravity="bottom|center_horizontal"
