--- a/res/layout/check_in_layout.xml
+++ b/res/layout/check_in_layout.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:geekui="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"    android:orientation="vertical"
     android:background="@color/background" >
@@ -8,8 +9,8 @@
     <LinearLayout
         android:id="@+id/intro_info"
         android:layout_width="fill_parent"
-        android:layout_height="100dip"
-        android:background="@drawable/bg_achievement_detail"
+        android:layout_height="121dip"
+        android:background="@drawable/rect_with_boder"
         android:orientation="vertical"
         android:paddingTop="20dip" >
 
@@ -51,13 +52,16 @@
         android:id="@+id/input_photo_comments"
         android:layout_width="fill_parent"
         android:layout_height="63.5dp"
+        android:layout_marginTop="4dp"
         android:layout_marginBottom="5dip"
         android:layout_marginLeft="12dip"
         android:layout_marginRight="12dip"
         android:background="@drawable/round_rect_with_boder"
         android:gravity="left|top"
         android:hint="input description"
-        android:padding="10dip" />
+        android:padding="10dip"
+        android:textColor="@color/edit_text_color"
+        android:textSize="12sp" />
     
     <RadioGroup
         android:id="@+id/radioGroup"
@@ -79,19 +83,23 @@
             android:id="@+id/tag_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:button="@drawable/post_twitter"
-            android:checked="true" >
+            android:layout_marginLeft="6dp"
+            android:button="@drawable/post_twitter" >
         </RadioButton>
     </RadioGroup>
 
-    <Button
+    <com.photowall.widget.typeface.TypefaceTextView
         android:id="@+id/create_btn"
-        android:layout_width="280dip"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
         android:layout_marginTop="10dip"
+        android:layout_marginLeft="12dip"
+        android:layout_marginRight="12dip"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/post_publish"
-        android:gravity="center" />
+        android:gravity="center"
+        android:text="PUBLISH"
+        android:textColor="@color/next_color"
+        geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
 
 </LinearLayout>
