--- a/res/layout/modify_user_layout.xml
+++ b/res/layout/modify_user_layout.xml
@@ -102,18 +102,16 @@
 	        android:padding="6dip"
 	        android:textSize="16sp" />
         
-       <TextView
+       <com.photowall.widget.TypefaceButton
            android:id="@+id/nextbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dip"
-           android:background="@drawable/btn_next"
-           android:gravity="center"
            android:text="NEXT"
-           android:textColor="@color/next_color"
-           android:textSize="18sp" />
+           android:textSize="18sp"
+           style="@style/red_white_button" />
         
        <LinearLayout android:id="@+id/seprator"
            android:layout_width="fill_parent"
