--- a/res/layout/quest_page_layout.xml
+++ b/res/layout/quest_page_layout.xml
@@ -34,6 +34,14 @@
         </ListView>
 
         <LinearLayout
+            android:id="@+id/seprator"
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:layout_above="@+id/guide_bottom"
+            android:background="@color/red"
+            android:orientation="horizontal" />
+        
+        <LinearLayout
             android:id="@+id/guide_bottom"
             android:layout_width="fill_parent"
             android:layout_height="54dp"
