--- a/res/layout/login_email_layout.xml
+++ b/res/layout/login_email_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:geekui="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -37,7 +38,7 @@
         android:textColor="@color/black"
         android:textSize="18.0sp" />
 
-    <Button
+    <com.photowall.widget.typeface.TypefaceTextView
         android:id="@+id/loginbtn"
         android:layout_width="fill_parent"
         android:layout_height="44dp"
@@ -47,7 +48,9 @@
         android:background="@drawable/login_email_btn"
         android:text="LOGIN"
         android:textColor="@color/login_email_color"
-        android:textSize="24sp"/>
+        android:textSize="24sp"
+        geekui:customTypeface="fonts/TrajanPro-Regular.otf"
+        android:gravity="center"/>
 	
     <RelativeLayout android:layout_width="wrap_content"
         android:layout_height="0dp"
