--- a/res/drawable/btn_red_white.xml
+++ b/res/drawable/btn_red_white.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?> 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true" android:drawable="@drawable/btn_red_white_pressed"/>
+    <item android:state_enabled="true" android:state_pressed="true" android:drawable="@drawable/btn_red_white_pressed"/>
+    <item android:state_enabled="true" android:state_checked="true" android:drawable="@drawable/btn_red_white_pressed"/>
+    <item android:state_enabled="true" android:state_selected="true" android:drawable="@drawable/btn_red_white_pressed"/>
     <item android:drawable="@drawable/btn_red_white_normal"/>
 </selector>
