--- a/res/layout/post_story_details_layout.xml
+++ b/res/layout/post_story_details_layout.xml
@@ -76,7 +76,6 @@
 	                android:layout_width="fill_parent"
 	                android:layout_height="wrap_content"
 	                android:layout_marginLeft="6.5dp"
-	                android:layout_marginBottom="4dp"
 	                android:gravity="bottom" >
 	
 	                <TextView
@@ -84,6 +83,7 @@
 	                    android:layout_width="0dp"
 	                    android:layout_height="wrap_content"
 	                    android:layout_weight="1"
+	                    android:layout_marginBottom="4dp"
 	                    android:drawableStart="@drawable/postwall_location"
 	                    android:text="New York City"
 	                    android:textColor="#ADADAD"
@@ -94,6 +94,7 @@
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
 	                    android:layout_marginLeft="8dp"
+	                    android:layout_marginBottom="4dp"
 	                    android:drawableStart="@drawable/postwall_icon_like"
 	                    android:text="100"
 	                    android:textColor="#ADADAD"
@@ -104,6 +105,7 @@
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
 	                    android:layout_marginLeft="8dp"
+	                    android:layout_marginBottom="4dp"
 	                    android:drawableStart="@drawable/postwall_icon_comment"
 	                    android:text="100"
 	                    android:textColor="#ADADAD"
@@ -138,7 +140,7 @@
 	                android:layout_marginLeft="10.5dp"
 	                android:text="POST"
 	                android:textColor="@color/next_color"
-	                android:background="@drawable/btn_post_detail" />
+	                android:background="@drawable/btn_red_white" />
 	        </LinearLayout>
 	        
 	        <LinearLayout android:id="@+id/comment_container"
