--- a/res/layout/archieved_dialog.xml
+++ b/res/layout/archieved_dialog.xml
@@ -3,14 +3,14 @@
     xmlns:geekui="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@android:color/transparent"
+    android:background="#b0000000"
     android:orientation="vertical"
     android:gravity="center_horizontal"
      >
     
     <FrameLayout
-        android:layout_width="200dp"
-        android:layout_height="177dp"
+        android:layout_width="160dp"
+        android:layout_height="197dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/achievement_card_base"
         android:maxHeight="177dp"
@@ -25,13 +25,13 @@
 
             <RelativeLayout
                 android:layout_width="fill_parent"
-                android:layout_height="114dp"
+                android:layout_height="129dp"
                 android:layout_marginTop="20dp" >
 
                 <ImageView
                     android:id="@+id/show_img"
                     android:layout_width="fill_parent"
-                    android:layout_height="114dp"
+                    android:layout_height="129dp"
                     android:layout_marginLeft="4dp"
                     android:layout_marginRight="4dp"
                     android:scaleType="centerCrop"
@@ -49,8 +49,8 @@
 
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="43dp"
-                android:layout_marginBottom="6dp"
+                android:layout_height="48dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginTop="2dp"
                 android:gravity="center"
                 android:orientation="horizontal" >
@@ -97,6 +97,7 @@
                 <LinearLayout
                     android:layout_width="1px"
                     android:layout_height="fill_parent"
+                    android:layout_marginBottom="6dp"
                     android:background="#FF999999" />
 
                 <LinearLayout
@@ -149,7 +150,7 @@
 
     <LinearLayout 
         android:layout_width="fill_parent"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
         android:layout_marginTop="20dp"
         android:background="@android:color/white"
         android:orientation="vertical">
