--- a/res/layout/common_title.xml
+++ b/res/layout/common_title.xml
@@ -13,6 +13,7 @@
         android:id="@+id/title_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:layout_marginLeft="8dp"
         android:src="@drawable/menu_back" />
 
@@ -35,6 +36,7 @@
         android:id="@+id/title_settings"
         android:layout_width="31.5dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:layout_gravity="center"
         android:src="@drawable/menu_top_right_btn" />
 
