--- a/res/layout/sliding_menu.xml
+++ b/res/layout/sliding_menu.xml
@@ -30,7 +30,7 @@
             android:layout_marginLeft="6dp"
             android:text="NOTIFICATIONS"
             android:textColor="#ee5458"
-            android:textSize="16sp"
+            android:textSize="@dimen/menu_notification_text_size"
             geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
 
     </LinearLayout>
@@ -54,7 +54,7 @@
             android:layout_marginTop="8dp"
             android:text="LEGEND.OF"
             android:textColor="#fefefe"
-            android:textSize="16sp"
+            android:textSize="@dimen/menu_title_text_size"
             geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
 		
         <LinearLayout android:layout_width="fill_parent"
@@ -79,7 +79,7 @@
                 android:layout_gravity="center_vertical"
                 android:text="username"
                 android:textColor="@android:color/white"
-                android:textSize="20sp" />
+                android:textSize="@dimen/menu_title_content_size" />
 
         </LinearLayout>
         
@@ -99,7 +99,7 @@
             android:layout_gravity="center"
             android:text="HOME"
             android:textColor="@android:color/white"
-            android:textSize="16sp"
+            android:textSize="@dimen/menu_title_text_size"
             android:gravity="center_vertical"
             android:paddingLeft="50dp"
             geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
@@ -119,7 +119,7 @@
             android:layout_gravity="center"
             android:text="EXPLORE"
             android:textColor="@android:color/white"
-            android:textSize="16sp"
+            android:textSize="@dimen/menu_title_text_size"
             android:gravity="center_vertical"
             android:paddingLeft="50dp"
             geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
@@ -148,7 +148,7 @@
             android:layout_gravity="center"
             android:text="FEEDBACK"
             android:textColor="@android:color/white"
-            android:textSize="16sp"
+            android:textSize="@dimen/menu_title_text_size"
             android:gravity="center_vertical"
             android:paddingLeft="50dp"
             geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
