--- a/res/values-v14/dimens.xml
+++ b/res/values-v14/dimens.xml
@@ -18,7 +18,8 @@
 */
 -->
 <resources>
-    <dimen name="menu_notification_text_size">14sp</dimen>
+    <dimen name="menu_notification_text_size">12sp</dimen>
+    <dimen name="menu_legend_text_size">14sp</dimen>
     <dimen name="menu_title_text_size">16sp</dimen>
     <dimen name="menu_title_content_size">18sp</dimen>
 </resources>
